tests/positive/issue3161/Stdlib/Data/Fixity.juvix
module Stdlib.Data.Fixity;

import Juvix.Builtin.V1.Fixity open public;
