tests/negative/issue3161/Stdlib/Data/String/Ord.juvix
module Stdlib.Data.String.Ord;

import Stdlib.Data.Fixity open;
import Stdlib.Data.String.Base open;
